[gd_scene load_steps=6 format=2]

[ext_resource path="res://card/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/playingCards.png" type="Texture" id=2]
[ext_resource path="res://assets/playingCardBacks.png" type="Texture" id=3]
[ext_resource path="res://assets/Audio/cardSlide1.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 95 )

[node name="Card" type="Area2D"]
position = Vector2( 560, 285 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Front" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 10
hframes = 6
frame = 6
region_rect = Rect2( 0, 0, 140, 190 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Back" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 5
hframes = 3

[node name="FlipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 0.6

[node name="FlipBF" type="Tween" parent="."]
[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
